--- a/careweb/templates/admin/ranger/reject_funding.html
+++ b/careweb/templates/admin/ranger/reject_funding.html
@@ -6,7 +6,7 @@
 {{ block.super }}
 <script type="text/javascript">
 
-console.log('test')
+console.log('test');
 </script>
 {% endblock %}
 
@@ -18,24 +18,22 @@ console.log('test')
   <div>
     <fieldset class="module aligned" style="padding: 20px;">
       <div>
-                <p class="required">Reason for Rejection:</p>
-            </div>
-        <div class="form-row field-reason">
-          
-            <div>
-                {{form.reason}}
-            </div>
-            
-        </div>
+          <p class="required">Reason for Rejection:</p>
+      </div>
+      <div class="form-row field-reason">
+          <div>
+              {{form.reason}}
+          </div>
+      </div>
     </fieldset>
   </div>
+
     <div class="submit-row" style="padding: 20px;">
         <input type="hidden" name="_selected_action" value="{{ funding.pk }}" />
         <input type="hidden" name="action" value="reject_funding" />
         <input class="btn btn-success" type="submit" name="apply" value="Reject Funding"/>
     </div>
-
-
+    
 </form>
 </div>
 {% endblock %}
