--- a/careweb/otherstatic/css/style.css
+++ b/careweb/otherstatic/css/style.css
@@ -41,6 +41,13 @@ Front-end developer : Mamunur Rashid
 
 /* Google Font */
 
+
+ /* Define Variables for the root elements */
+ :root{
+  --navy-blue-color: #14162d;
+  --leave-green-color: #9fde50;
+ }
+
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700|Roboto:400,500,700");
 
 html,
@@ -74,6 +81,14 @@ button {
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+}
+
+.button-style{
+  padding: 12px; 
+  background-color: var(--navy-blue-color); 
+  color: #fff; border-radius: 
+  50px; font-size: 20px; 
+  font-weight: bold;
 }
 
 h1,
@@ -136,7 +151,7 @@ p {
 
 .form-control:focus {
   box-shadow: 0 0px 0px rgba(255, 255, 255, 0);
-  border-color: #9fde50;
+  border-color: var(--navy-blue-color);
 }
 
 .modal {
@@ -163,7 +178,7 @@ p {
 }
 
 .mybtn {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 180px;
   height: 50px;
   color: #fff;
@@ -188,7 +203,7 @@ p {
 2. Site Preloader Css Start
 ===================================================*/
 .site-preloader {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   height: 100%;
   left: 0;
   position: fixed;
@@ -310,7 +325,7 @@ header.header {
 
 .header.header .nav-link.active,
 .header.header .nav-link:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .header.header .nav-link.active::before {
@@ -320,7 +335,7 @@ header.header {
   left: 0px;
   width: 100%;
   height: 4px;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .header.header .nav-item.dropdown .dropdown-item {
@@ -335,7 +350,7 @@ header.header {
 
 .header.header .nav-item.dropdown .dropdown-item.active,
 .header.header .nav-item.dropdown .dropdown-item:hover {
-  background: #9fde50;
+  background: var(--navy-blue-color);
   color: #fff;
 }
 
@@ -369,7 +384,7 @@ header.header {
 
 .header .call_btn a {
   border-radius: 50px;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 150px;
   height: 50px;
   color: #fff;
@@ -384,7 +399,7 @@ header.header {
 
 .big-btn a {
   border-radius: 50px;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 150px;
   height: 50px;
   color: #fff;
@@ -472,16 +487,16 @@ header.header {
   transition: 0.3s ease-in;
 }
 #slider-area .slide-caption .slider-inner .slide-btn .video-icon-btn:hover i {
-  background-color: #9fde50;
-  border-color: #9fde50;
+  background-color: var(--navy-blue-color);
+  border-color: var(--navy-blue-color);
   color: #fff;
 }
 #slider-area .slide-caption .slider-inner .slide-btn .video-icon-btn:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 #slider-area .slide-caption .slider-inner .slide-btn a:hover {
   text-decoration: none;
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 #slider-area .slide-caption .slider-inner .slide-btn {
@@ -597,7 +612,7 @@ header.header {
 }
 
 #slider-area .silder .owl-nav div:hover {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 #slider-area .silder .owl-nav .owl-next {
@@ -688,7 +703,7 @@ Slider Area End
   transition: all 0.3s ease-in-out;
 }
 .service .box:hover .left i {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .service .box .content h5 {
@@ -714,7 +729,7 @@ Slider Area End
 
 .service .box .content a:hover,
 .service .box .content a:hover i {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .service .box .content a i {
@@ -737,7 +752,7 @@ Slider Area End
 }
 
 .service .quateBox a {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 200px;
   height: 50px;
   color: #fff;
@@ -797,7 +812,7 @@ Services Area Start
 .giveAndtakeNumber .postNumber {
   border-style: solid;
   border-width: 2px;
-  border-color: #9fde50;
+  border-color: var(--navy-blue-color);
   background-color: rgba(255, 255, 255, 0.102);
   width: 330px;
   height: 50px;
@@ -843,12 +858,12 @@ Services Area Start
   transform: translateY(-50%);
   background: none;
   border: none;
-  color: #9fde50;
+  color: var(--navy-blue-color);
   cursor: pointer;
 }
 
 .giveAndtakeNumber .companyNumber {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 220px;
   height: 50px;
   border-radius: 50px;
@@ -895,7 +910,7 @@ Give And Take NumberSection End
 
 .v-box a {
   border-radius: 50%;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   position: absolute;
   width: 70px;
   height: 70px;
@@ -924,7 +939,7 @@ Give And Take NumberSection End
   display: block;
   width: 80px;
   height: 80px;
-  background: #9fde50;
+  background: var(--navy-blue-color);
   border-radius: 50%;
   -webkit-animation: pulse-border 1500ms ease-out infinite;
   -moz-animation: pulse-border 1500ms ease-out infinite;
@@ -989,7 +1004,7 @@ Give And Take NumberSection End
   font-family: "Montserrat", sans-serif;
 }
 .historyBox a:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .historyBox p {
@@ -1122,7 +1137,7 @@ History Section Area End
 .single-testimonials .name-box-wrapper .text-box span {
   font-size: 12px;
   text-transform: uppercase;
-  color: #9fde50;
+  color: var(--navy-blue-color);
   font-weight: 500;
   font-style: italic;
 }
@@ -1134,7 +1149,7 @@ History Section Area End
 
 .testimonial .owl-carousel .owl-controls .owl-nav .owl-prev:hover::after,
 .testimonial .owl-carousel .owl-controls .owl-nav .owl-next:hover::after {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .testimonial .owl-nav .owl-prev {
@@ -1433,7 +1448,7 @@ Counter Area End
 .footer .widget3 ul li a:hover,
 .footer .widget4 ul li a:hover,
 .footer .widget2 a:hover p {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .footer .widget3 h5 {
@@ -1502,7 +1517,7 @@ Footer Area End
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.09);
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .totop > a p {
@@ -1560,7 +1575,7 @@ Footer Area End
 
 .insuronbreadcrumb .links li a:hover,
 .insuronbreadcrumb .links li a.active {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .insuronbreadcrumb .links li span {
@@ -1604,7 +1619,7 @@ header.header.boxshadownone.stiky {
 
 .about .aboutBtn {
   border-radius: 50px;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   width: 170px;
   height: 50px;
   color: #fff;
@@ -1664,7 +1679,7 @@ About Section End
   transition: all 0.3s ease-in-out;
 }
 .feature-style-one .single-feature-style-one:hover .icon i {
-  background: #9fde50;
+  background: var(--navy-blue-color);
 }
 .feature-style-one .single-feature-style-one h3 {
   margin: 0;
@@ -1681,7 +1696,7 @@ About Section End
 }
 
 /* .feature-style-one .single-feature-style-one h3:hover {
-    color: #9fde50;
+    color: var(--navy-blue-color);
 } */
 
 .feature-style-one .single-feature-style-one p {
@@ -1703,7 +1718,7 @@ About Section End
   transition: all 0.3s ease;
 }
 .feature-style-one .single-feature-style-one a.read-more:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .feature-style-one .single-feature-style-one a.read-more i {
@@ -1729,7 +1744,7 @@ About Section End
   color: #fff;
 }
 .counter.aboutCounter .c-box sup {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 .counter.aboutCounter .c-box h3 {
   color: #f1f1f1;
@@ -1777,7 +1792,7 @@ About Section End
   .icon-box
   .inner
   i {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .why-choose-us-style-one .single-why-choose-us-style-one .text-box {
@@ -1881,7 +1896,7 @@ About Section End
   transition: all 0.3s ease-in-out;
 }
 .feature .box:hover i {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .feature .box h3 {
@@ -1957,7 +1972,7 @@ About Section End
   transition: all 0.3s;
 }
 #latest_news .b-c li a:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 #latest_news .b-c .span {
   padding: 0px 10px;
@@ -1966,7 +1981,7 @@ About Section End
 }
 
 #latest_news .b-c {
-  color: #9fde50;
+  color: var(--navy-blue-color);
   margin-top: 15px;
   margin-bottom: 13px;
 }
@@ -1989,7 +2004,7 @@ About Section End
 }
 
 #latest_news .c-box a:hover h4 {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 #latest_news .c-box article p {
@@ -1999,7 +2014,7 @@ About Section End
   line-height: 26px;
 }
 #latest_news .c-box article .readmore:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 #latest_news .c-box article .readmore {
   font-size: 16px;
@@ -2042,13 +2057,13 @@ About Section End
 
 .sidebar .search-form .btn {
   color: #fff;
-  border-color: #9fde50;
+  border-color: var(--navy-blue-color);
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   min-width: auto;
-  background: #9fde50;
+  background: var(--navy-blue-color);
   padding: 0px 27px;
   border-radius: 0px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -2239,7 +2254,7 @@ About Section End
 
 .recent-posts-widget .recent-post-icon i {
   font-size: 25px;
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .single-blog {
@@ -2334,7 +2349,7 @@ About Section End
 }
 
 .blogs .blog-box .blog-details .meta li a:hover {
-  color: #9fde50;
+  color: var(--navy-blue-color);
 }
 
 .blogs .blog-box .blog-details .meta {
@@ -2363,7 +2378,7 @@ About Section End
 
 #latest_news .blog-content-area blockquote i {
   font-size: 50px;
-  color: #9fde50;
+  color: var(--navy-blue-color);
   margin-right: 20px;
 }
 
@@ -2538,7 +2553,7 @@ About Section End
 }
 
 .comments-form .btn-default:hover {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .blog #latest_news img {
@@ -2573,8 +2588,8 @@ About Section End
 #latest_news .pagination .page-link:hover,
 #latest_news .pagination .page-link.active {
   color: #fff;
-  background: #9fde50;
-  border-color: #9fde50;
+  background: var(--navy-blue-color);
+  border-color: var(--navy-blue-color);
 }
 
 .blog_details #latest_news {
@@ -2683,8 +2698,8 @@ About Section End
 }
 
 .logRegForm .loginnow {
-  background: #9fde50;
-  border: 2px solid #9fde50;
+  background: var(--navy-blue-color);
+  border: 2px solid var(--navy-blue-color);
 }
 
 .logRegForm .loginnow:hover {
@@ -2719,7 +2734,7 @@ About Section End
   font-weight: 400;
   color: #495057;
   text-align: center;
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   border: 0px solid #ced4da;
   border-radius: 0px;
   width: 60px;
@@ -2838,7 +2853,7 @@ About Section End
 }
 
 .address .media:hover i {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
 }
 
 .contact-form .mr_btn_fill {
@@ -2860,7 +2875,7 @@ About Section End
   outline: 0px;
 }
 .contact-form .mr_btn_fill:hover {
-  background: #9fde50;
+  background: var(--navy-blue-color);
 }
 
 .contact-wrap .contact-form .input-field {
@@ -2913,7 +2928,7 @@ About Section End
 }
 
 .error-content a {
-  background-color: #9fde50;
+  background-color: var(--navy-blue-color);
   color: #ffffff;
   display: inline-block;
   font-size: 18px;
