--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -56,10 +56,10 @@ Profile
                                     <h5 class="h5-font">Plan: {{profile.plan }}</h5>
                                     <h4 class="h4-font">Balance: {{profile.balance }}</h4>
                                     <small class="p-small">Next Payment Date: <span>{{next_subscription }}</span></small>
-                                    <a href="{% url 'subscription_new' %}" class='btn btn-lg' style="padding: 12px; background-color: #9fde50; color: #fff; border-radius: 50px; font-size: 20px; font-weight: bold;"><i class="pe-7s-cash"> </i> Make Subscription Payment</a>
+                                    <a href="{% url 'subscription_new' %}" class='btn btn-lg button-style'><i class="pe-7s-cash"> </i> Make Subscription Payment</a>
 
                                 {%else%}
-                                    <a href="{% url 'profile_plan' pk=profile.id %}" class='btn btn-lg' style="padding: 12px; background-color: #9fde50; color: #fff; border-radius: 50px; font-size: 20px; font-weight: bold;"><i class="pe-7s-note2"> </i> Choose a Health Plan</a>
+                                    <a href="{% url 'profile_plan' pk=profile.id %}" class='btn btn-lg button-style'><i class="pe-7s-note2"> </i> Choose a Health Plan</a>
                                 {% endif %}
                             </div>
                         
