create photo upload field

--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -210,7 +210,7 @@ Profile
             <div class="row">
                 <div class="col-md-6 col-lg-3">            
                     <div class="box">
-                        <a href="{% url 'profile_personal' pk=profile.id %}"><i class="pe-7s-user"></i></a>
+                        <a href="{% url 'profile_photo' pk=profile.id %}"><i class="pe-7s-camera"></i></a>
                         <h3>
                             Photo
                         </h3>
@@ -288,7 +288,7 @@ Profile
 
                  <div class="col-md-6 col-lg-3">
                     <div class="box">
-                        <a href="{% url 'profile_identification' pk=profile.id %}"><i class="pe-7s-users"></i></a>
+                        <a href="{% url 'profile_identification' pk=profile.id %}"><i class="pe-7s-id"></i></a>
                         <h3>
                             Identification
                         </h3>
