home link from register page

--- a/careweb/templates/client/register.html
+++ b/careweb/templates/client/register.html
@@ -28,7 +28,7 @@ Register
                             <div class="links">
                                 <ul>
                                     <li>
-                                        <a href="">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
                                         <span>/</span>
