--- a/careweb/templates/client/remove_dependant.html
+++ b/careweb/templates/client/remove_dependant.html
@@ -28,7 +28,7 @@ Remove dependant
                             <div class="links">
                                 <ul>
                                     <li>
-                                        <a href="index.html">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
                                         <span>/</span>
