--- a/careweb/templates/subscription/base.html
+++ b/careweb/templates/subscription/base.html
@@ -18,7 +18,7 @@ Subscribe
                             <div class="links">
                                 <ul>
                                     <li>
-                                        <a href="index.html">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
                                         <span>/</span>
