--- a/careweb/templates/client/personal.html
+++ b/careweb/templates/client/personal.html
@@ -29,7 +29,7 @@ Personal
                             <div class="links">
                                 <ul>
                                     <li>
-                                        <a href="index.html">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
                                         <span>/</span>
