--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -85,7 +85,7 @@
                         </h5>
                         <ul>
                             <li>
-                                <a href="index.html">
+                                <a href="/">
                                     Home
                                 </a>
                             </li>
