add error, 404 and 403 templates

--- a/careweb/templates/base.html
+++ b/careweb/templates/base.html
@@ -39,6 +39,9 @@
 	<!--Responsive Stylesheet-->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}">
 	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|PT+Serif|Solway|Sulphur+Point&display=swap" rel="stylesheet">
+	{% block extra-css %}
+	
+	{% endblock extra-css %}
 </head>
 
 <body>
