--- a/careweb/templates/header.html
+++ b/careweb/templates/header.html
@@ -4,7 +4,8 @@
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <img src="{% static 'img/logo3.png' %}" alt="">
+                    <img src="{% static 'img/TouchSmart_Logo.jpg' %}" alt="">
+                    {% comment %} <img src="{% static 'img/logo3.png' %}" alt=""> {% endcomment %}
                     {% comment %} <img src="{% static 'img/h-futurecare.png' %}" alt=""> {% endcomment %}
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
