--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -166,6 +166,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <p>&copy; Copyright All rights reserved 2019.</p>
+                        <p>powered by Futureview</p>
                     </div>
                 </div>
             </div>
