--- a/careweb/templates/header.html
+++ b/careweb/templates/header.html
@@ -6,7 +6,7 @@
                 <a class="navbar-brand" href="{% url 'home' %}">
                     <img src="{% static 'img/TouchSmart_Logo.jpg' %}" alt="">
                     {% comment %} <img src="{% static 'img/logo3.png' %}" alt=""> {% endcomment %}
-                    {% comment %} <img src="{% static 'img/h-futurecare.png' %}" alt=""> {% endcomment %}
+                    <img src="{% static 'img/futurecare1.png' %}" alt=""> {% comment %} {% endcomment %}
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
