--- a/careweb/templates/client/edit_dependant.html
+++ b/careweb/templates/client/edit_dependant.html
@@ -98,8 +98,11 @@ Edit dependant
                                             </div>
                                       
                                             <div class="form-row">
-                                                <div class="col-md-12">
+                                                <div class="col-md-6">
                                                     <button class="loginnow" type="submit">Save</button>
+                                                </div>
+                                                 <div class="col-md-6">
+                                                    <a href="{% url 'profile_dependants' pk=object.id %}"><button class="loginnow" style="background:red" type="button">Cancel</button></a>
                                                 </div>
                                             </div>
                                         </div>
