--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -136,7 +136,7 @@
                         <div class="right">
                             <div class="content">
                                 <h5>
-                                        LASHMA
+                                        LSHS
                                 </h5>
                                 <p>
                                     FutureCare health tips
@@ -157,7 +157,7 @@
                         <div class="right">
                             <div class="content">
                                 <h5>
-                                        LASHMA Quality Life
+                                        Quality Life
                                 </h5>
                                 <p>
                                     Quality Life health care
@@ -256,7 +256,7 @@
                                     </div>
                                         <a href="#" class="companyNumber">
                                             <i class="fas fa-phone"></i>    
-                                            +00 88 99 11 22
+                                            +234 803 633 9696
                                         </a>
                                 </div>
                     </div>
