--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -248,10 +248,10 @@
                             <div class="numberFormArea">
                                     <div class="numberForm">
                                         <form action="#">
-                                                <input class="postNumber" type="text" placeholder="Your Name">
+                                                {% comment %} <input class="postNumber" type="text" placeholder="Your Name">
                                                 <button type="submit" class="submitButton">
                                                     <i class="fas fa-paper-plane"></i>
-                                                </button>
+                                                </button> {% endcomment %}
                                         </form>
                                     </div>
                                         <a href="#" class="companyNumber">
