--- a/careweb/templates/client/add_dependant.html
+++ b/careweb/templates/client/add_dependant.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-Add dependant
+    Add dependant
 {% endblock title %}
 
 {% comment %}
@@ -17,113 +17,114 @@ Add dependant
 
 {% block content %}
 
-<section id="insuronbreadcrumb" class="insuronbreadcrumb">
-            <div class="bcoverlay"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="Content">
-                            <h2>
-                                Add Dependant
-                            </h2>
-                            <div class="links">
-                                <ul>
-                                    <li>
-                                        <a href="/">Home</a>
-                                    </li>
-                                    <li>
-                                        <span>/</span>
-                                    </li>
-                                    <li>
-                                        <a class="active" href="{% url 'profile' pk=object.id %}">Profile</a>
-                                    </li>
-                                      <li>
-                                        <span>/</span>
-                                    </li>
-                                    <li>
-                                        <a class="active" href="{% url 'profile_dependants' pk=object.id %}">Dependants</a>
-                                    </li>
-                                      <li>
-                                        <span>/</span>
-                                    </li>
-                                    <li>
-                                        <a class="active" href="#">Add Dependant</a>
-                                    </li>
-                                </ul>
-                            </div>
+    <section id="insuronbreadcrumb" class="insuronbreadcrumb">
+        <div class="bcoverlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="Content">
+                        <h2>
+                            Add Dependant
+                        </h2>
+                        <div class="links">
+                            <ul>
+                                <li>
+                                    <a href="/">Home</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="{% url 'profile' pk=object.id %}">Profile</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="{% url 'profile_dependants' pk=object.id %}">Dependants</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="#">Add Dependant</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> 
-        
+        </div>
+    </section>
+
     <!--  BreadCrumb Area Start  -->
 
-<!-- SignUP Area Start -->
-<section class="logRegForm"> 
+    <!-- SignUP Area Start -->
+    <section class="logRegForm">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-10">
-                        <div class="contact_form_wrappre2">
-                            <h2>
-                                Add Dependant
-                            </h2>
-                                <form action="" method="post">{% csrf_token %}
-                                {% if form.non_field_errors %}
-                                    {% for error in form.non_field_errors %}
+                    <div class="contact_form_wrappre2">
+                        <h2>
+                            Add Dependant
+                        </h2>
+                        <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+                            {% if form.non_field_errors %}
+                                {% for error in form.non_field_errors %}
                                     <div class="alert alert-danger">
                                         {{ error }}
                                     </div>
-                                    {% endfor %}
-                                {% endif %}
+                                {% endfor %}
+                            {% endif %}
 
-                                   {% comment %} <div class="inputArea">
+                            {% comment %} <div class="inputArea">
                                     {{ form|crispy }}
                                 </div>
                                 <button class="loginnow" type="submit">Save Dependant</button> {% endcomment %}
 
-                                         <div class="inputArea">
+                            <div class="inputArea">
 
-                                            {% comment %} <div class="form-row"> {% endcomment %}
-                                            {% comment %} <div class="col-md-12"> {% endcomment %}
-                                            {{form.surname|as_crispy_field}}
-                                            {{form.first_name|as_crispy_field}}
-                                            {{form.middle_name|as_crispy_field}}
-                                            {{form.dob|as_crispy_field}}
-                                            {{form.relationship|as_crispy_field}}
-                                            <div class="row">
-                                          
-                                            </div>
-                                      
-                                            <div class="form-row">
-                                                <div class="col-md-12">
-                                                    <button class="loginnow" type="submit">Save</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-                        </div>
+                                {% comment %} <div class="form-row"> {% endcomment %}
+                                {% comment %} <div class="col-md-12"> {% endcomment %}
+                                {{ form.surname|as_crispy_field }}
+                                {{ form.first_name|as_crispy_field }}
+                                {{ form.middle_name|as_crispy_field }}
+                                {{ form.dob|as_crispy_field }}
+                                {{ form.relationship|as_crispy_field }}
+                                {{ form.photo|as_crispy_field }}
+                                <div class="row">
+
+                                </div>
+
+                                <div class="form-row">
+                                    <div class="col-md-12">
+                                        <button class="loginnow" type="submit">Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- SignUp Area End -->
-    
 
-  {% endblock content %}
 
-  {% block extra-js %}
+{% endblock content %}
+
+{% block extra-js %}
     <script type="text/javascript">
-    $('#id_username').addClass('form-control');
-    $('#id_username').attr('placeholder', 'Username');
+        $('#id_username').addClass('form-control');
+        $('#id_username').attr('placeholder', 'Username');
 
-    // glyphicon
+        // glyphicon
 
-    $('#id_password').addClass('form-control');
-    $('#id_password').attr('placeholder', 'Password');
+        $('#id_password').addClass('form-control');
+        $('#id_password').attr('placeholder', 'Password');
 
-    $('.nav-link').removeClass('active')
-    $('#profile-nav-link').addClass('active')
+        $('.nav-link').removeClass('active')
+        $('#profile-nav-link').addClass('active')
 
     </script>
 {% endblock extra-js %}
