--- a/careweb/templates/client/dependants.html
+++ b/careweb/templates/client/dependants.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 {% load widget_tweaks %}
 
 
 {% block title %}
-Dependants
+    Dependants
 {% endblock title %}
 
 {% comment %}
@@ -16,96 +17,111 @@ Dependants
 
 {% block content %}
 
-<section id="insuronbreadcrumb" class="insuronbreadcrumb">
-            <div class="bcoverlay"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="Content">
-                            <h2>
-                                Dependants
-                            </h2>
-                            <div class="links">
-                                <ul>
-                                    <li>
-                                        <a href="/">Home</a>
-                                    </li>
-                                    <li>
-                                        <span>/</span>
-                                    </li>
-                                    <li>
-                                        <a class="active" href="{% url 'profile' pk=object.id %}">Profile</a>
-                                    </li>
-                                      <li>
-                                        <span>/</span>
-                                    </li>
-                                    <li>
-                                        <a class="active" href="#">Dependants</a>
-                                    </li>
-                                </ul>
-                            </div>
+    <section id="insuronbreadcrumb" class="insuronbreadcrumb">
+        <div class="bcoverlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="Content">
+                        <h2>
+                            Dependants
+                        </h2>
+                        <div class="links">
+                            <ul>
+                                <li>
+                                    <a href="/">Home</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="{% url 'profile' pk=object.id %}">Profile</a>
+                                </li>
+                                <li>
+                                    <span>/</span>
+                                </li>
+                                <li>
+                                    <a class="active" href="#">Dependants</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> 
-        
+        </div>
+    </section>
+
     <!--  BreadCrumb Area Start  -->
 
-<!-- SignUP Area Start -->
-<section class="logRegForm"> 
+    <!-- SignUP Area Start -->
+    <section class="logRegForm">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12">
                     <div>
                         <p><a href="{% url 'profile' %}" class="btn btn-success"> &laquo; Back to Profile</a></p>
                     </div>
-                        <div class="contact_form_wrappre2">
-                            <h2>
-                                Dependants
-                            </h2>
-                               <table class="table">
+                    <div class="contact_form_wrappre2">
+                        <h2>
+                            Dependants
+                        </h2>
+                        <table class="table">
+                            <tr>
+                                <th></th>
+                                <th>Name</th>
+                                <th>Date of Birth</th>
+                                <th>Relationship</th>
+                                <th>Remove/Edit</th>
+                            </tr>
+                            {% for dep in dependants %}
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Date of Birth</th>
-                                    <th>Relationship</th>
-                                    <th>Remove/Edit</th>
+                                    <td>
+                                        {% if dep.photo %}
+                                            <a href="{{ dep.photo.url }}" target="_blank">
+                                                <img src="{{ dep.photo.url }}" alt="photo" class="user-photo-avatar">
+                                            </a>
+                                        {% else %}
+                                            <img src="{% static 'img/avatar.jpg' %}" alt="photo"
+                                                 class="user-photo-avatar">
+                                        {% endif %}
+                                    </td>
+                                    <td>{{ dep.first_name }} {{ dep.middle_name }} {{ dep.surname }}</td>
+                                    <td>{{ dep.dob }}</td>
+                                    <td>{{ dep.get_relationship_display }}</td>
+                                    <td><a href="{% url 'profile_remove_dependant' dep.id %}"><span style="color:red;">remove</span></a>
+                                        | <a href="{% url 'profile_edit_dependant' dep.id %}">edit</a></td>
                                 </tr>
-                                {% for dep in dependants %}
-                                  <tr>
-                                    <td>{{dep.first_name}} {{dep.middle_name}} {{dep.surname}}</td>
-                                    <td>{{dep.dob}}</td>
-                                    <td>{{dep.get_relationship_display}}</td>
-                                    <td><a href="{% url 'profile_remove_dependant' dep.id %}"><span style="color:red;">remove</span></a> | <a href="{% url 'profile_edit_dependant' dep.id %}">edit</a></td>
-                                  </tr>
-                                {% endfor %}
-                                <tfoot>
-                                    <tr><td colspan="4"><a href="{% url 'profile_add_dependant' %}" class="btn btn-default">Add Dependant</a></td></tr>
-                                </tfoot>
+                            {% endfor %}
+                            <tfoot>
+                            <tr>
+                                <td colspan="4"><a href="{% url 'profile_add_dependant' %}" class="btn btn-default">Add
+                                    Dependant</a></td>
+                            </tr>
+                            </tfoot>
 
-                               </table>
-                        </div>
-                       
+                        </table>
+                    </div>
+
                 </div>
             </div>
         </div>
     </section>
     <!-- SignUp Area End -->
-    
 
-  {% endblock content %}
 
-  {% block extra-js %}
+{% endblock content %}
+
+{% block extra-js %}
     <script type="text/javascript">
-    $('#id_username').addClass('form-control');
-    $('#id_username').attr('placeholder', 'Username');
+        $('#id_username').addClass('form-control');
+        $('#id_username').attr('placeholder', 'Username');
 
-    // glyphicon
+        // glyphicon
 
-    $('#id_password').addClass('form-control');
-    $('#id_password').attr('placeholder', 'Password');
+        $('#id_password').addClass('form-control');
+        $('#id_password').attr('placeholder', 'Password');
 
-    $('.nav-link').removeClass('active')
-    $('#profile-nav-link').addClass('active')
+        $('.nav-link').removeClass('active')
+        $('#profile-nav-link').addClass('active')
     </script>
 {% endblock extra-js %}
