Implemented new excel upload format

--- a/careweb/templates/admin/client/client/change_list.html
+++ b/careweb/templates/admin/client/client/change_list.html
@@ -1,16 +1,26 @@
 {% extends 'admin/change_list.html' %}
 
-{% block result_list %}
+{% block search %}
+    <style>
+        #upload-client-label{
+            position: absolute; right: 30px; margin-top: 10px
+        }
+    @media (max-width: 700px) {
+        #upload-client-label{
+            position: static;
+            margin-left: 10px;
+            margin-top: 10px
+        }
+    }
+    </style>
+    <label id="upload-client-label" for="client-upload" class="btn btn-success" >
+        Upload Clients
+    </label>
+    <i class="fa fa-spinner fa-2x fa-spin text-info" id="upload-spinner" style="display: none"></i>
+    <input accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+           type="file" name="clients" id="client-upload" hidden>
     {{ block.super }}
-    <form id="upload-client-form" action="{% url 'upload_clients' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <label id="upload-client-label" for="client-upload" class="btn btn-success" style="margin-right: 15px">
-            Upload Clients
-        </label>
-        <i class="fa fa-spinner fa-2x fa-spin text-info" id="upload-spinner" style="display: none"></i>
-        <input accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-               type="file" name="clients" id="client-upload" hidden>
-    </form>
+
 
     <script>
         const $ = jQuery;
