Added stats to admin dashboard

--- a/careweb/templates/core/dashboard__header_stat.html
+++ b/careweb/templates/core/dashboard__header_stat.html
@@ -1,13 +1,35 @@
 {% load humanize %}
 
+<style>
+    .mb-c{
+        margin-bottom: 10px !important;
+    }
+</style>
+
 <div class="row">
     <div class="col-xl-3 col-lg-6">
-        <div class="card shadow card-stats mb-4 mb-xl-0">
+        <div class="card shadow card-stats mb-c mb-xl-0">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Clients</h5>
-                        <span class="h3 font-weight-bold mb-0">{{ clients|intcomma }}</span>
+                        <span class="h5 font-weight-bold mb-0">{{ all_clients|intcomma }}</span>
+                    </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                    <span class="text-warning mr-2"><i class="fas fa-users"></i></span>
+                    <span class="text-nowrap">All Clients</span>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-6">
+        <div class="card shadow card-stats mb-c mb-xl-0">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Clients</h5>
+                        <span class="h5 font-weight-bold mb-0">{{ clients|intcomma }}</span>
                     </div>
                 </div>
                 <p class="mt-3 mb-0 text-muted text-sm">
@@ -18,12 +40,28 @@
         </div>
     </div>
     <div class="col-xl-3 col-lg-6">
-        <div class="card shadow card-stats mb-4 mb-xl-0">
+        <div class="card shadow card-stats mb-c mb-xl-0">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <h5 class="card-title text-uppercase text-muted mb-0">Clients</h5>
+                        <span class="h5 font-weight-bold mb-0">{{ active_clients|intcomma }}</span>
+                    </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                    <span class="text-warning mr-2"><i class="fas fa-users"></i></span>
+                    <span class="text-nowrap">Active Clients</span>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-3 col-lg-6">
+        <div class="card shadow card-stats mb-c mb-xl-0">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Rangers</h5>
-                        <span class="h3 font-weight-bold mb-0">{{ rangers|intcomma }}</span>
+                        <span class="h5 font-weight-bold mb-0">{{ rangers|intcomma }}</span>
                     </div>
                 </div>
                 <p class="mt-3 mb-0 text-muted text-sm">
@@ -34,12 +72,12 @@
         </div>
     </div>
     <div class="col-xl-3 col-lg-6">
-        <div class="card shadow card-stats mb-4 mb-xl-0">
+        <div class="card shadow card-stats mb-c mb-xl-0">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Payment</h5>
-                        <span class="h3 font-weight-bold mb-0">&#8358;{{ payment }}</span>
+                        <span class="h5 font-weight-bold mb-0">&#8358;{{ payment }}</span>
                     </div>
                 </div>
                 <p class="mt-3 mb-0 text-muted text-sm">
@@ -50,12 +88,12 @@
         </div>
     </div>
     <div class="col-xl-3 col-lg-6">
-        <div class="card shadow card-stats mb-4 mb-xl-0">
+        <div class="card shadow card-stats mb-c mb-xl-0">
             <div class="card-body">
                 <div class="row">
                     <div class="col">
                         <h5 class="card-title text-uppercase text-muted mb-0">Payment</h5>
-                        <span class="h3 font-weight-bold mb-0">&#8358;{{ month_payment }}</span>
+                        <span class="h5 font-weight-bold mb-0">&#8358;{{ month_payment }}</span>
                     </div>
                 </div>
                 <p class="mt-3 mb-0 text-muted text-sm">
